--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <header class="header">
+        <div class="header__left">
+          <h1 class="logo">Hollixton</h1>
+          <nav>
+            <ul class="left__nav-list">
+              <li class="nav-list__item">Girls</li>
+              <li class="nav-list__item">Guys</li>
+              <li class="nav-list__item">initial-scale</li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header__right">
+          <nav>
+            <ul class="right__nav-list">
+              <li class="nav-list__item">
+                <span class="material-symbols-outlined"> search </span>
+              </li>
+              <li class="nav-list__item">
+                <span class="material-symbols-outlined"> person </span>
+              </li>
+              <li class="nav-list__item">
+                <span class="material-symbols-outlined"> shopping_bag </span>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
