first page HTML done (kinda)!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="left__nav-list">
               <li class="nav-list__item">Girls</li>
               <li class="nav-list__item">Guys</li>
-              <li class="nav-list__item">initial-scale</li>
+              <li class="nav-list__item">Sale</li>
             </ul>
           </nav>
         </div>
@@ -40,6 +40,77 @@
           </nav>
         </div>
       </header>
+      <main class="main">
+        <h2 class="title">Home</h2>
+        <ul class="shoping-items">
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">
+            <span class="previous-item-price">£40</span>
+            <span class="discounted-item-price">£21.99</span>
+            </p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">£19.99</p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+        </ul>
+      </main>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
