--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="app">
-      <header class="header">
+      <!-- <header class="header">
         <div class="header__left">
           <h1 class="logo">Hollixton</h1>
           <nav>
@@ -110,7 +110,7 @@
             <p class="item-price">$19.99</p>
           </li>
         </ul>
-      </main>
+      </main> -->
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
