--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </ul>
           </nav>
         </div>
-      </header>
-      <main class="main">
+      </header> -->
+      <!-- <main class="main">
         <h2 class="title">Home</h2>
         <ul class="shoping-items">
           <li class="shopping-item">
@@ -109,8 +109,72 @@
             <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
             <p class="item-price">$19.99</p>
           </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li><li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li><li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li><li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li><li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li><li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li><li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
         </ul>
       </main> -->
+      <!-- <footer class="footer">
+    <h3 class="footer__logo">Hollixton</h3>
+    <p class="uk">
+      <img class="uk-flag" src="./330425 (1).png" alt="uk flag">
+      United Kingdom
+    </p>
+      </footer> -->
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
