created the product details page with html and css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="app">
-      <!-- <header class="header">
+      <header class="header">
         <div class="header__left">
           <h1 class="logo">Hollixton</h1>
           <nav>
@@ -39,9 +39,9 @@
             </ul>
           </nav>
         </div>
-      </header> -->
-      <!-- <main class="main">
-        <h2 class="title">Home</h2>
+      </header>
+      <main class="main">
+        <!-- <h2 class="title">Home</h2>
         <ul class="shoping-items">
           <li class="shopping-item">
             <img
@@ -166,16 +166,30 @@
             <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
             <p class="item-price">$19.99</p>
           </li>
-        </ul>
-      </main> -->
-      <!-- <footer class="footer">
-    <h3 class="footer__logo">Hollixton</h3>
-    <p class="uk">
-      <img class="uk-flag" src="./330425 (1).png" alt="uk flag">
-      United Kingdom
-    </p>
-      </footer> -->
+        </ul> -->
+        <div class="product-details">
+          <div class="image-container">
+            <img
+              class="shoping-item-details-img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="shoping item image"
+            />
+          </div>
+          <div class="product-details-container">
+            <h3 class="product-name">CREWNECK T-SHIRT 3-PACK</h3>
+            <button class="add-to-bag-button">ADD TO BAG</button>
+          </div>
+        </div>
+      </main>
+      <footer class="footer">
+        <h3 class="footer__logo">Hollixton</h3>
+        <p class="uk">
+          <img class="uk-flag" src="./330425 (1).png" alt="uk flag" />
+          United Kingdom
+        </p>
+      </footer>
     </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
