created the product details page in js, added the events to go to that page!!

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="app">
-      <header class="header">
+      <!-- <header class="header">
         <div class="header__left">
           <h1 class="logo">Hollixton</h1>
           <nav>
@@ -39,8 +39,8 @@
             </ul>
           </nav>
         </div>
-      </header>
-      <main class="main">
+      </header> -->
+      <!-- <main class="main"> -->
         <!-- <h2 class="title">Home</h2>
         <ul class="shoping-items">
           <li class="shopping-item">
@@ -167,7 +167,7 @@
             <p class="item-price">$19.99</p>
           </li>
         </ul> -->
-        <div class="product-details">
+        <!-- <div class="product-details">
           <div class="image-container">
             <img
               class="shoping-item-details-img"
@@ -180,14 +180,14 @@
             <button class="add-to-bag-button">ADD TO BAG</button>
           </div>
         </div>
-      </main>
-      <footer class="footer">
+      </main> -->
+      <!-- <footer class="footer">
         <h3 class="footer__logo">Hollixton</h3>
         <p class="uk">
           <img class="uk-flag" src="./330425 (1).png" alt="uk flag" />
           United Kingdom
         </p>
-      </footer>
+      </footer> -->
     </div>
 
     <script type="module" src="/src/main.ts"></script>
