created the search modal!!

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
           </nav>
         </div>
       </header> -->
-      <!-- <main class="main"> -->
-        <!-- <h2 class="title">Home</h2>
+
+      <!-- <main class="main">
+        <h2 class="title">Home</h2>
         <ul class="shoping-items">
           <li class="shopping-item">
             <img
@@ -51,8 +52,8 @@
             />
             <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
             <p class="item-price">
-            <span class="previous-item-price">£40</span>
-            <span class="discounted-item-price">£21.99</span>
+              <span class="previous-item-price">£40</span>
+              <span class="discounted-item-price">£21.99</span>
             </p>
           </li>
           <li class="shopping-item">
@@ -117,47 +118,8 @@
             />
             <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
             <p class="item-price">$19.99</p>
-          </li><li class="shopping-item">
-            <img
-              class="shoping-item__img"
-              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
-              alt="T-shirt"
-            />
-            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
-            <p class="item-price">$19.99</p>
-          </li><li class="shopping-item">
-            <img
-              class="shoping-item__img"
-              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
-              alt="T-shirt"
-            />
-            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
-            <p class="item-price">$19.99</p>
-          </li><li class="shopping-item">
-            <img
-              class="shoping-item__img"
-              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
-              alt="T-shirt"
-            />
-            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
-            <p class="item-price">$19.99</p>
-          </li><li class="shopping-item">
-            <img
-              class="shoping-item__img"
-              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
-              alt="T-shirt"
-            />
-            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
-            <p class="item-price">$19.99</p>
-          </li><li class="shopping-item">
-            <img
-              class="shoping-item__img"
-              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
-              alt="T-shirt"
-            />
-            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
-            <p class="item-price">$19.99</p>
-          </li><li class="shopping-item">
+          </li>
+          <li class="shopping-item">
             <img
               class="shoping-item__img"
               src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
@@ -166,8 +128,54 @@
             <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
             <p class="item-price">$19.99</p>
           </li>
-        </ul> -->
-        <!-- <div class="product-details">
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+          <li class="shopping-item">
+            <img
+              class="shoping-item__img"
+              src="https://img.hollisterco.com/is/image/anf/KIC_324-1085-0123-100_prod1"
+              alt="T-shirt"
+            />
+            <h3 class="item-name">Crewneck T-shirt 3-Pack</h3>
+            <p class="item-price">$19.99</p>
+          </li>
+        </ul>
+
+        <div class="product-details">
           <div class="image-container">
             <img
               class="shoping-item-details-img"
@@ -180,7 +188,18 @@
             <button class="add-to-bag-button">ADD TO BAG</button>
           </div>
         </div>
+
+        <div class="search-modal__wrapper">
+          <div class="search-modal__container">
+            <button class="search-modal__close-button">x</button>
+            <h3 class="search-modal__title">Search your favorite items!</h3>
+            <form>
+              <input class="search-input" type="text" placeholder="Search..." />
+            </form>
+          </div>
+        </div>
       </main> -->
+
       <!-- <footer class="footer">
         <h3 class="footer__logo">Hollixton</h3>
         <p class="uk">
